# claude-notify

./: .gitignore  README.md  install.sh  worktree
dashboard/src/: index.html
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: lib.rs  main.rs
hooks/: notify.sh
lib/: colors.sh  notepad.sh
