[package]
name = "devkit-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "devkit_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]
